# youtube-java

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jschartner/youtube/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Duktape.cpp  duktape_wrapper.c  ffmpeg_wrapper.c
app/src/main/java/com/jschartner/youtube/: Download.java  DownloadImageTask.java  DraggableOnTouchListener.java  Ffmpeg.java  FullscreenPlayerActivity.java  FullscreenPlayerFragment.java  History.java  JexoFormat.java  JexoPlayer.java  JexoPlayerView.java  JexoPlayerView2.java  MainActivity.java  MainActivity2.java  MediaPlaybackService.java  OnSwipeTouchListener.java  PlayerActivity.java  PlayerFragment.java  ResultAdapter.java  RunningDownload.java  RunningDownloadManager.java  StartFragment.java  TvFullScreenPlayerFragment.java  TvMainActivity.java  Utils.java  Youtube.java  Youtube1.java
app/src/main/res/anim/: from_left.xml
app/src/main/res/drawable/: gradient.xml  gradient2.xml
app/src/main/res/layout/: activity_fullsscreen_player.xml  activity_main.xml  activity_main2.xml  activity_player.xml  exo_styled_player_control_view.xml  exo_styled_player_control_view2.xml  exo_styled_settings_list_item.xml  exo_styled_sub_settings_list_item.xml  fragment_fullscreen_player.xml  fragment_player.xml  fragment_start.xml  list_item.xml  popup_window.xml  popup_window_list.xml  popup_window_list_item.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/navigation/: nav_graph.xml  tv_nav_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jschartner/youtube/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
youtube-base/: CMakeLists.txt  adsf.cpp  adsf.h  asdfadf.cpp  build.gradle
youtube-base/src/androidTest/java/com/jschartner/youtubebase/: ExampleInstrumentedTest.java
youtube-base/src/main/cpp/: duktape_wrapper.c  ffmpeg_wrapper.c  main.cpp  transcode.c
youtube-base/src/main/res/layout/: exo_styled_player_control_view.xml
youtube-base/src/main/res/values/: colors.xml
youtubetv/: build.gradle
youtubetv/src/main/: AndroidManifest.xml
youtubetv/src/main/res/layout/: activity_tv_main.xml  fragment_tv_full_screen_player.xml
youtubetv/src/main/res/navigation/: tv_nav_graph.xml
(+11 files in other folders)
